--- a/log.html
+++ b/log.html
@@ -2071,25 +2071,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,4700],[],[[4,0,0,[],[1,406,4292],[[0,5,6,0,7,8,0,0,[1,408,4290],[[408,2,9]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,8292],[],[[4,0,0,[],[1,486,2050],[[0,5,6,0,7,8,0,0,[1,487,2048],[[488,2,9]]]]],[10,0,0,[],[1,2537,5753],[[0,11,6,0,12,13,0,0,[1,2538,148],[[2539,2,14]]],[0,11,6,0,12,15,0,0,[1,2687,125],[[2687,2,16]]],[0,11,6,0,12,17,0,0,[1,2813,133],[[2813,2,18]]],[0,19,6,0,20,21,0,0,[1,2946,100],[[2947,2,22]]],[0,19,6,0,20,23,0,0,[1,3047,76],[[3047,2,24]]],[0,19,6,0,20,25,0,0,[1,3123,136],[[3123,2,26]]],[0,27,6,0,28,29,0,0,[1,3259,28],[[3287,2,30]]],[0,31,32,0,33,34,0,0,[1,3288,5001],[[8289,2,35]]]]]],[],[2,2,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Primeiro Teste","*C:\\Users\\joaop\\OneDrive\\Área de Trabalho\\curso-robot\\primeiro_teste.robot","*primeiro_teste.robot","*Abrir navegador e acessar o site do organo","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*url=http://localhost:3000/    browser=Chrome","*Opening browser 'Chrome' to base url '<a href=\"http://localhost:3000/\">http://localhost:3000/\x3c/a>'."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Primeiro Teste","*C:\\Users\\joaop\\OneDrive\\Área de Trabalho\\curso-robot\\primeiro_teste.robot","*primeiro_teste.robot","*Abrir navegador e acessar o site do organo","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*url=http://localhost:3000/    browser=Chrome","*Opening browser 'Chrome' to base url '<a href=\"http://localhost:3000/\">http://localhost:3000/\x3c/a>'.","*Preencher os campos do formulário","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*id:form-nome    Akemi","*Typing text 'Akemi' into text field 'id:form-nome'.","*id:form-cargo    Desenvolvedora","*Typing text 'Desenvolvedora' into text field 'id:form-cargo'.","*id:form-imagem    <a href=\"https://picsum.photos/200/300\">https://picsum.photos/200/300\x3c/a>","*Typing text '<a href=\"https://picsum.photos/200/300\">https://picsum.photos/200/300\x3c/a>' into text field 'id:form-imagem'.","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*class:lista-suspensa","*Clicking element 'class:lista-suspensa'.","*//option[contains(.,'Programação')]","*Clicking element '//option[contains(.,'Programação')]'.","*id:form-botao","*Clicking element 'id:form-botao'.","*Element Should Be Visible","*<p>Verifies that the element identified by <code>locator\x3c/code> is visible.\x3c/p>","*class:colaborador","*Element 'class:colaborador' is displayed.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*5s","*Slept 5 seconds."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:04","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:05","fail":0,"id":"s1","label":"Primeiro Teste","name":"Primeiro Teste","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:08","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:08","fail":0,"id":"s1","label":"Primeiro Teste","name":"Primeiro Teste","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1744897817929;
+window.output["baseMillis"] = 1744929617342;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 4735;
+window.output["generated"] = 8341;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
