--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,4700],[],[[4,0,0,[],[1,406,4292],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,8292],[],[[4,0,0,[],[1,486,2050],[]],[5,0,0,[],[1,2537,5753],[]]],[],[2,2,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Primeiro Teste","*C:\\Users\\joaop\\OneDrive\\Área de Trabalho\\curso-robot\\primeiro_teste.robot","*primeiro_teste.robot","*Abrir navegador e acessar o site do organo"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Primeiro Teste","*C:\\Users\\joaop\\OneDrive\\Área de Trabalho\\curso-robot\\primeiro_teste.robot","*primeiro_teste.robot","*Abrir navegador e acessar o site do organo","*Preencher os campos do formulário"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:04","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:05","fail":0,"id":"s1","label":"Primeiro Teste","name":"Primeiro Teste","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:08","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:08","fail":0,"id":"s1","label":"Primeiro Teste","name":"Primeiro Teste","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1744897817929;
+window.output["baseMillis"] = 1744929617342;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 4735;
+window.output["generated"] = 8341;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
