--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,8292],[],[[4,0,0,[],[1,486,2050],[]],[5,0,0,[],[1,2537,5753],[]]],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,4722],[],[[4,0,0,[],[1,621,4100],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Primeiro Teste","*C:\\Users\\joaop\\OneDrive\\Área de Trabalho\\curso-robot\\primeiro_teste.robot","*primeiro_teste.robot","*Abrir navegador e acessar o site do organo","*Preencher os campos do formulário"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Primeiro Teste","*C:\\Users\\joaop\\OneDrive\\Área de Trabalho\\curso-robot\\primeiro_teste.robot","*primeiro_teste.robot","*Verificar se ao preencher corretamente o formulário os dados são inseridos corretamente na lista e se um novo card é criado no time esperado"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:08","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:08","fail":0,"id":"s1","label":"Primeiro Teste","name":"Primeiro Teste","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:04","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:05","fail":0,"id":"s1","label":"Primeiro Teste","name":"Primeiro Teste","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1744929617342;
+window.output["baseMillis"] = 1745099523402;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 8341;
+window.output["generated"] = 4746;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
