--- a/log.html
+++ b/log.html
@@ -2071,25 +2071,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,4722],[],[[4,0,0,[],[1,621,4100],[[0,5,0,0,0,0,0,0,[1,622,3369],[[0,6,7,0,8,9,0,0,[1,623,3367],[[624,2,10]]]]],[0,11,0,0,0,0,0,0,[1,3992,544],[[0,12,7,0,13,14,0,0,[1,3992,146],[[3993,2,15]]],[0,12,7,0,13,16,0,0,[1,4139,122],[[4139,2,17]]],[0,12,7,0,13,18,0,0,[1,4261,137],[[4261,2,19]]],[0,20,7,0,21,22,0,0,[1,4398,92],[[4399,2,23]]],[0,20,7,0,21,24,0,0,[1,4491,44],[[4491,2,25]]]]],[0,26,0,0,0,0,0,0,[1,4536,90],[[0,20,7,0,21,27,0,0,[1,4537,89],[[4537,2,28]]]]],[0,29,0,0,0,0,0,0,[1,4627,94],[[0,30,7,0,31,32,0,0,[1,4627,93],[[4720,2,33]]]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,4932],[],[[4,0,0,[],[1,435,4496],[[1,5,6,0,0,0,0,0,[1,436,2068],[[0,7,8,0,9,10,0,0,[1,437,2067],[[437,2,11]]]]],[0,12,0,0,0,0,0,0,[1,2505,99],[[0,13,8,0,14,15,0,0,[1,2505,99],[[2506,2,16]]]]],[0,17,0,0,0,0,0,0,[1,2605,155],[[0,18,8,0,19,20,0,0,[1,2605,115],[[2720,2,21]]],[0,18,8,0,19,22,0,0,[1,2721,20],[[2740,2,23]]],[0,18,8,0,19,24,0,0,[1,2741,19],[[2760,2,25]]]]],[2,26,6,0,0,0,0,0,[1,2761,2169],[[0,27,8,0,28,0,0,0,[1,2761,2168],[]]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Primeiro Teste","*C:\\Users\\joaop\\OneDrive\\Área de Trabalho\\curso-robot\\primeiro_teste.robot","*primeiro_teste.robot","*Verificar se ao preencher corretamente o formulário os dados são inseridos corretamente na lista e se um novo card é criado no time esperado","*Dado que eu acesse o Organo","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}    browser=Chrome","*Opening browser 'Chrome' to base url '<a href=\"http://localhost:3000/\">http://localhost:3000/\x3c/a>'.","*E preencha os campos do formulário","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${CAMPO_NOME}    Akemi","*Typing text 'Akemi' into text field 'id:form-nome'.","*${CAMPO_CARGO}    Desenvolvedora","*Typing text 'Desenvolvedora' into text field 'id:form-cargo'.","*${CAMPO_IMAGEM}    <a href=\"https://picsum.photos/200/300\">https://picsum.photos/200/300\x3c/a>","*Typing text '<a href=\"https://picsum.photos/200/300\">https://picsum.photos/200/300\x3c/a>' into text field 'id:form-imagem'.","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*${CAMPO_TIME}","*Clicking element 'class:lista-suspensa'.","*${OPCAO_PROGRAMACAO}","*Clicking element '//option[contains(.,'Programação')]'.","*E clique no botão criar card","*${BOTAO_CARD}","*Clicking element 'id:form-botao'.","*Então identificar o card no time esperado","*Element Should Be Visible","*<p>Verifies that the element identified by <code>locator\x3c/code> is visible.\x3c/p>","*class:colaborador","*Element 'class:colaborador' is displayed."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Preenchimento Incorreto","*C:\\Users\\joaop\\OneDrive\\Área de Trabalho\\curso-robot\\preenchimento_incorreto.robot","*preenchimento_incorreto.robot","*Verificar se quando um campo obrigatório não for preenchido corretamente o sistema exibe uma mensagem de campo obrigatório","*Dado que eu acesse o Organo","*setup_teardown","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*url=http://localhost:3000/    browser=Chrome","*Opening browser 'Chrome' to base url '<a href=\"http://localhost:3000/\">http://localhost:3000/\x3c/a>'.","*Dado que eu clique no botão criar card","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*${BOTAO_CARD}","*Clicking element 'id:form-botao'.","*Então sistema deve apresentar mensagem de campo obrigatório","*Element Should Be Visible","*<p>Verifies that the element identified by <code>locator\x3c/code> is visible.\x3c/p>","*id:form-nome-erro","*Element 'id:form-nome-erro' is displayed.","*id:form-cargo-erro","*Element 'id:form-cargo-erro' is displayed.","*id:form-times-erro","*Element 'id:form-times-erro' is displayed.","*Fechar navegador","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:04","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:05","fail":0,"id":"s1","label":"Primeiro Teste","name":"Primeiro Teste","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:04","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:05","fail":0,"id":"s1","label":"Preenchimento Incorreto","name":"Preenchimento Incorreto","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1745099523402;
+window.output["baseMillis"] = 1747257416869;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 4746;
+window.output["generated"] = 4967;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
